[package]
name = "zellij-claude-bar"
version = "0.1.0"
authors = ["Noah Kiss"]
edition = "2021"
description = "Zellij status bar plugin showing Claude API usage limits and projections"
license = "MIT"
repository = "https://github.com/noahkiss/zellij-claude-bar"

[dependencies]
zellij-tile = "0.43"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
